--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,7 @@
             <p>如果您还有任何使用上的问题，可以前往<a href="https://support.qq.com/products/93940" target="_blank">反馈社区</a>提问。</p>
           </div>
         </section>
-        <section class="App-footer">©2019 腾云扣钉 版权所有 | 粤ICP备 14029750号-8</section>
+        <footer>©2019 腾云扣钉 版权所有 | 粤ICP备 14029750号-8</footer>
       </div>
     </div>
   </body>
